--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,12 @@
 
 # Build results
 [Dd]ebug/
+[Dd]ebugPublic/
 [Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
 build/
 [Bb]in/
 [Oo]bj/
@@ -23,3 +28,11 @@ build/
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
+
+# ReSharper is a .NET coding add-in
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# JustCode is a .NET coding add-in
+.JustCode
