--- a/src/Microsoft.Xaml.Interactivity/Microsoft.Xaml.Interactivity.csproj
+++ b/src/Microsoft.Xaml.Interactivity/Microsoft.Xaml.Interactivity.csproj
@@ -142,6 +142,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <FilesToSign Include="$(OutDir)$(AssemblyName).$(FileExtension)">
+      <Authenticode>Microsfot</Authenticode>
+    </FilesToSign>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
