Fix spelling mistake.

--- a/src/Microsoft.Xaml.Interactions/Microsoft.Xaml.Interactions.csproj
+++ b/src/Microsoft.Xaml.Interactions/Microsoft.Xaml.Interactions.csproj
@@ -130,7 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <FilesToSign Include="$(OutDir)$(AssemblyName).$(FileExtension)">
-      <Authenticode>Microsfot</Authenticode>
+      <Authenticode>Microsoft</Authenticode>
     </FilesToSign>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
