--- a/src/Microsoft.Xaml.Interactivity/Microsoft.Xaml.Interactivity.csproj
+++ b/src/Microsoft.Xaml.Interactivity/Microsoft.Xaml.Interactivity.csproj
@@ -144,7 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <FilesToSign Include="$(OutDir)$(AssemblyName).$(FileExtension)">
-      <Authenticode>Microsfot</Authenticode>
+      <Authenticode>Microsoft</Authenticode>
     </FilesToSign>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
