--- a/src/Microsoft.Xaml.Interactions/Microsoft.Xaml.Interactions.csproj
+++ b/src/Microsoft.Xaml.Interactions/Microsoft.Xaml.Interactions.csproj
@@ -129,7 +129,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <FilesToSign Include="$(OutDir)$(AssemblyName).$(FileExtension)">
+    <FilesToSign Include="$(OutputPath)$(AssemblyName).$(FileExtension)">
       <Authenticode>Microsoft</Authenticode>
     </FilesToSign>
   </ItemGroup>
