--- a/src/Microsoft.Xaml.Interactivity/Microsoft.Xaml.Interactivity.csproj
+++ b/src/Microsoft.Xaml.Interactivity/Microsoft.Xaml.Interactivity.csproj
@@ -143,7 +143,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <FilesToSign Include="$(OutputPath)$(AssemblyName).$(FileExtension)">
+    <FilesToSign Include="$(OutputPath)$(AssemblyName).dll">
       <Authenticode>Microsoft</Authenticode>
     </FilesToSign>
   </ItemGroup>
