Use correct symbol for copyright.

--- a/scripts/Microsoft.Xaml.Behaviors.Wpf.nuspec
+++ b/scripts/Microsoft.Xaml.Behaviors.Wpf.nuspec
@@ -12,7 +12,7 @@
         <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=708401</licenseUrl>
         <projectUrl>http://go.microsoft.com/fwlink/?LinkID=651678</projectUrl>
         <iconUrl>http://go.microsoft.com/fwlink/?LinkID=708511</iconUrl>
-        <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+        <copyright>&#169; Microsoft Corporation. All rights reserved.</copyright>
         <tags>Behavior Action Behaviors Actions Blend Managed C# Interaction Interactivity Interactions</tags>
     </metadata>
 
