--- a/src/Microsoft.Xaml.Interactions/Microsoft.Xaml.Interactions.csproj
+++ b/src/Microsoft.Xaml.Interactions/Microsoft.Xaml.Interactions.csproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <FilesToSign Include="$(OutputPath)$(AssemblyName).dll">
       <Authenticode>Microsoft</Authenticode>
+      <StrongName>67</StrongName>
     </FilesToSign>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
