--- a/src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj
+++ b/src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj
@@ -1,192 +1,92 @@
-﻿<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <AssemblyName>Microsoft.Xaml.Behaviors</AssemblyName>
+    <TargetFrameworks>net45</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <SchemaVersion>2.0</SchemaVersion>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <ProjectGuid>{8620C598-B704-429E-BCA5-7E5DDE506923}</ProjectGuid>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <Blend_ExtensionRoot>Libraries</Blend_ExtensionRoot>
-    <DefineConstants>WPF;$(DefineConstants)</DefineConstants>
-    <Expression_CodeCoverageSubdirectory>$(Blend_ExtensionRoot)\</Expression_CodeCoverageSubdirectory>
-    <OutputPath>..\..\out\$(SolutionName)\bin\$(Platform)\$(Configuration)\</OutputPath>
-    <IntermediateOutputPath>..\..\out\$(SolutionName)\obj\$(Platform)\$(Configuration)\</IntermediateOutputPath>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <OutputPath>..\..\BehaviorsSDK\bin\AnyCPU\Debug\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\out\BehaviorsSdk\bin\AnyCPU\Release\Microsoft.Xaml.Behaviors.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <!-- This must come after the inclusion of the targets file -->
-    <PlatformTarget>AnyCPU</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup>
     <PackageId>Microsoft.Xaml.Behaviors.Wpf</PackageId>
-    <PackageVersion>1.0.1</PackageVersion>
+    <Version>1.0.1</Version>
     <Title>Microsoft.Xaml.Behaviors.Wpf</Title>
     <Authors>Microsoft</Authors>
     <Description>Easily add interactivity to your apps using XAML Behaviors for WPF. Behaviors encapsulate reusable functionalities for elements that can be easily added to your XAML without the need for more imperative code.</Description>
+    <Company>Microsoft Corporation</Company>
+    <Product>Microsoft.Xaml.Behaviors</Product>
     <PackageLicenseUrl>https://go.microsoft.com/fwlink/?linkid=2038239</PackageLicenseUrl>
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2026353</PackageProjectUrl>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=708511</PackageIconUrl>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
     <PackageTags>Behavior Action Behaviors Actions Blend Managed C# Interaction Interactivity Interactions</PackageTags>
-    <PackageOutputPath>..\..\scripts</PackageOutputPath>
-    <NuspecFile>..\..\scripts\Microsoft.Xaml.Behaviors.Wpf.nuspec</NuspecFile>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/Microsoft/XamlBehaviorsWpf</PackageProjectUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Microsoft/XamlBehaviorsWpf/master/LICENSE</PackageLicenseUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <GenerateNuspecDependsOn>$(GenerateNuspecDependsOn);TimestampNugetPackage</GenerateNuspecDependsOn>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <OutputPath>..\..\BehaviorsSDK\bin\AnyCPU\$(Configuration)\</OutputPath>
+    <PackageOutputPath>..\..\BehaviorsSDK\bin\AnyCPU\$(Configuration)\</PackageOutputPath>
+    <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
+    <Expression_CodeCoverageSubdirectory>$(Blend_ExtensionRoot)\</Expression_CodeCoverageSubdirectory>
+    <IntermediateOutputPath>..\..\out\$(SolutionName)\obj\$(Platform)\$(Configuration)\</IntermediateOutputPath>
+    <DefineConstants>WPF;$(DefineConstants)</DefineConstants>
   </PropertyGroup>
+  
   <PropertyGroup Condition="'$(SignType)' == 'real'">
+    <DefineConstants>SIGN_REAL;$(DefineConstants)</DefineConstants>
     <SignAssembly>true</SignAssembly>
-    <DelaySign>true</DelaySign>
     <AssemblyOriginatorKeyFile>FinalPublicKey.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>FinalPublicKey.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <PropertyGroup>
     <DelaySign>true</DelaySign>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="AttachableCollection.cs" />
-    <Compile Include="Behavior.cs" />
-    <Compile Include="BehaviorCollection.cs" />
-    <Compile Include="ComparisonLogic.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Core\ActionCommand.cs" />
-    <Compile Include="Core\CallMethodAction.cs" />
-    <Compile Include="Core\ChangePropertyAction.cs" />
-    <Compile Include="Core\ComparisonCondition.cs" />
-    <Compile Include="Core\ComparisonConditionType.cs" />
-    <Compile Include="Core\ConditionalExpression.cs" />
-    <Compile Include="Core\ConditionBehavior.cs" />
-    <Compile Include="Core\ConditionCollection.cs" />
-    <Compile Include="Core\DataStateBehavior.cs" />
-    <Compile Include="Core\DataStoreChangedTrigger.cs" />
-    <Compile Include="Core\DataTrigger.cs" />
-    <Compile Include="Core\ExtendedVisualStateManager.cs" />
-    <Compile Include="Core\GoToStateAction.cs" />
-    <Compile Include="Core\ICondition.cs" />
-    <Compile Include="Core\LaunchUriOrFileAction.cs" />
-    <Compile Include="Core\PropertyChangedTrigger.cs" />
-    <Compile Include="Core\PrototypingActions.cs" />
-    <Compile Include="Core\RemoveElementAction.cs" />
-    <Compile Include="Core\SetDataStoreValueAction.cs" />
-    <Compile Include="Core\TimerTrigger.cs" />
-    <Compile Include="CustomPropertyValueEditorAttribute.cs" />
-    <Compile Include="DataBindingHelper.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DefaultTriggerAttribute.cs" />
-    <Compile Include="DependencyObjectHelper.cs" />
-    <Compile Include="EventObserver.cs" />
-    <Compile Include="EventTrigger.cs" />
-    <Compile Include="EventTriggerBase.cs" />
-    <Compile Include="ExceptionStringTable.Designer.cs">
-      <SubType>Code</SubType>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ExceptionStringTable.resx</DependentUpon>
-    </Compile>
-    <Compile Include="IAttachedObject.cs" />
-    <Compile Include="Input\KeyTrigger.cs" />
-    <Compile Include="Input\TranslateZoomRotateBehavior.cs" />
-    <Compile Include="Interaction.cs" />
-    <Compile Include="InteractionContext.cs" />
-    <Compile Include="InvokeCommandAction.cs" />
-    <Compile Include="ITickTimer.cs" />
-    <Compile Include="Layout\FluidMoveBehavior.cs" />
-    <Compile Include="Layout\MouseDragElementBehavior.cs" />
-    <Compile Include="Media\PlaySoundAction.cs" />
-    <Compile Include="Media\StoryboardAction.cs" />
-    <Compile Include="Media\StoryboardTrigger.cs" />
-    <Compile Include="Media\TransitionEffect.cs" />
-    <Compile Include="NameResolver.cs" />
-    <Compile Include="ScreenType.cs" />
-    <Compile Include="Serializer.cs" />
-    <Compile Include="TargetedTriggerAction.cs" />
-    <Compile Include="TriggerAction.cs" />
-    <Compile Include="TriggerActionCollection.cs" />
-    <Compile Include="TriggerBase.cs" />
-    <Compile Include="TriggerCollection.cs" />
-    <Compile Include="TypeConstraintAttribute.cs" />
-    <Compile Include="TypeConverterHelper.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VisualStateUtilities.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="..\RuntimeVersion.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="..\Version\Version.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <EmbeddedResource Include="ExceptionStringTable.resx">
-      <Public>True</Public>
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ExceptionStringTable.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+
+  <ItemGroup Condition="'$(TargetFramework)'=='net45'">
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.XML" />
     <Reference Include="WindowsBase">
       <Private>False</Private>
-      <HintPath>$(WindowsPath)\WindowsBase.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore">
       <Private>False</Private>
-      <HintPath>$(WindowsPath)\PresentationCore.dll</HintPath>
     </Reference>
     <Reference Include="PresentationFramework">
       <Private>False</Private>
-      <HintPath>$(WindowsPath)\PresentationFramework.dll</HintPath>
     </Reference>
-    <AppDesigner Include="obj\Properties\" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="FinalPublicKey.snk" />
-  </ItemGroup>
-  <ItemGroup>
+
+  <ItemGroup Condition="'$(SignType)' == 'real'">
     <FilesToSign Include="$(OutputPath)$(AssemblyName).dll">
       <Authenticode>Microsoft</Authenticode>
       <StrongName>67</StrongName>
     </FilesToSign>
   </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="MicroBuild.Core">
+    <Compile Include="..\RuntimeVersion.cs" Link="RuntimeVersion.cs" />
+    <Compile Include="..\Version\Version.cs" Link="Version.cs" />
+
+    <Compile Update="ExceptionStringTable.Designer.cs">
+      <SubType>Code</SubType>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ExceptionStringTable.resx</DependentUpon>
+    </Compile>
+    <EmbeddedResource Update="ExceptionStringTable.resx">
+      <Public>True</Public>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionStringTable.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+      <PackageReference Include="MicroBuild.Core">
       <Version>0.3.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="NuGet.Build.Tasks.Pack">
-      <Version>4.8.0</Version>
-    </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+
   <Target Name="TimestampNugetPackage">
     <PropertyGroup>
       <CurrentDate>$([System.DateTime]::Now.ToString(yyyyMMdd-HHmm))</CurrentDate>
@@ -194,4 +94,5 @@
       <NuspecProperties>version=$(PackageVersion)</NuspecProperties>
     </PropertyGroup>
   </Target>
+
 </Project>
