--- a/Test/UnitTests.NetCore/UnitTests.NetCore.csproj
+++ b/Test/UnitTests.NetCore/UnitTests.NetCore.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="MSTest.STAExtensions" Version="1.0.3-beta" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
